# Brio-Kernel

./: .gitignore  DOCUMENTATION_SUMMARY.md  README.md  book.toml
brio-core/: .tarpaulin.toml  Cargo.toml  deny.toml
brio-core/benches/: Cargo.toml
brio-core/benches/benches/: message_preparation.rs  sql_store.rs  tool_parsing.rs  vfs_diff.rs
brio-core/brio-tui/: Cargo.toml
brio-core/brio-tui/src/: app.rs  main.rs  messages.rs  network.rs  ui.rs
brio-core/components/agent-sdk/: Cargo.toml
brio-core/components/agent-sdk/src/: config.rs  engine.rs  error.rs  lib.rs  prompt.rs  tools.rs  types.rs
brio-core/components/agent-sdk/src/agent/: base.rs  mod.rs  parsers.rs  registry.rs
brio-core/components/agent-sdk/src/agent/tools/: branch.rs  control.rs  fs.rs  grep.rs  mod.rs  shell.rs
brio-core/components/agent-sdk/src/engine/: builder.rs  mod.rs  react_loop.rs  state.rs
brio-core/components/agent-sdk/src/tools/: constants.rs  mod.rs  parser.rs  registry.rs  validation.rs  wasm_bridge.rs
brio-core/components/agents/coder/: Cargo.toml
brio-core/components/agents/coder/src/: engine.rs  lib.rs  prompt.rs  tools.rs
brio-core/components/agents/council/: Cargo.toml
brio-core/components/agents/council/src/: engine.rs  lib.rs  prompt.rs  tools.rs
brio-core/components/agents/foreman/: Cargo.toml
brio-core/components/agents/foreman/src/: engine.rs  lib.rs  tools.rs
brio-core/components/agents/reviewer/: Cargo.toml
brio-core/components/agents/reviewer/src/: engine.rs  lib.rs  prompt.rs  tools.rs
brio-core/components/agents/smart-agent/: Cargo.toml
brio-core/components/agents/smart-agent/src/: lib.rs
brio-core/components/supervisor/: Cargo.toml  README.md
brio-core/components/supervisor/examples/: transaction_usage.rs
brio-core/components/supervisor/src/: domain.rs  lib.rs  merge.rs  mesh_client.rs  orchestrator.rs  planner.rs  repository.rs  selector.rs  wit_bindings.rs
brio-core/components/supervisor/src/branch/: coordinator.rs  events.rs  execution.rs  lifecycle.rs  manager.rs  merge_request.rs  mod.rs  operations.rs  state_machine.rs  tool_integration.rs
brio-core/components/supervisor/src/branch/events/: broadcaster.rs  handlers.rs  mod.rs
brio-core/components/supervisor/src/branch/execution/: engine.rs  mod.rs  strategies.rs  tracking.rs
brio-core/components/supervisor/src/diff/: mod.rs  myers.rs  three_way.rs  traits.rs
brio-core/components/supervisor/src/diff/myers/: algorithm.rs  mod.rs  (+1 more)
brio-core/components/supervisor/src/domain/: errors.rs  ids.rs  mod.rs
brio-core/components/supervisor/src/handlers/: branching.rs  coordinating.rs  executing.rs  mod.rs  pending.rs  planning.rs  verifying.rs
brio-core/components/supervisor/src/merge/: conflict.rs  mod.rs
brio-core/components/supervisor/src/repository/: column.rs  mod.rs  transaction.rs
brio-core/components/supervisor/tests/: branch_integration_tests.rs
brio-core/components/supervisor/tests/common/: mod.rs
brio-core/components/tools/shell-tool/: Cargo.toml
brio-core/components/tools/shell-tool/src/: lib.rs
brio-core/components/tools/tool_grep/: Cargo.toml
brio-core/components/tools/tool_grep/src/: lib.rs
brio-core/components/tools/tool_read_file/: Cargo.toml
brio-core/components/tools/tool_read_file/src/: lib.rs
brio-core/integration-tests/: Cargo.toml
brio-core/integration-tests/tests/: agents_integration.rs  branch_integration.rs  error_recovery.rs  manifesto.rs  mesh_integration.rs  tools_integration.rs  vfs_integration.rs
brio-core/integration-tests/tests/common/: mod.rs
brio-core/kernel/: Cargo.toml  build.rs  clippy_output.txt  clippy_output_2.txt  test_output.txt  test_output_final.txt
brio-core/kernel/proto/: mesh.proto
brio-core/kernel/src/: branch_manager.rs  host.rs  lib.rs  main.rs  registry.rs
brio-core/kernel/src/api/: branches.rs  mod.rs
brio-core/kernel/src/api/branches/: handlers.rs  mod.rs  routes.rs  types.rs
brio-core/kernel/src/api/sessions/: handlers.rs  mod.rs  routes.rs  types.rs
brio-core/kernel/src/branch_manager/: core.rs  mod.rs  storage.rs  types.rs
brio-core/kernel/src/engine/: linker.rs  mod.rs  runner.rs  runtime.rs
brio-core/kernel/src/host/: mesh.rs  mod.rs  permissions.rs  state.rs
brio-core/kernel/src/inference/: anthropic.rs  mod.rs  openai.rs  provider.rs  registry.rs  types.rs
brio-core/kernel/src/inference/anthropic/: client.rs  mapping.rs  mod.rs  retry.rs
brio-core/kernel/src/inference/openai/: client.rs  mapping.rs  mod.rs  streaming.rs
brio-core/kernel/src/inference/registry/: core.rs  mod.rs  routing.rs
brio-core/kernel/src/inference/types/: circuit_breaker.rs  error.rs  message.rs  mod.rs  request.rs  response.rs
brio-core/kernel/src/infrastructure/: audit.rs  config.rs  mod.rs  server.rs  telemetry.rs
brio-core/kernel/src/infrastructure/config/: branching.rs  database.rs  inference.rs  mesh.rs  mod.rs  sandbox.rs  server.rs  telemetry.rs
brio-core/kernel/src/mesh/: events.rs  grpc.rs  mod.rs  remote.rs  service.rs  types.rs
brio-core/kernel/src/mesh/types/: addressing.rs  mod.rs  node.rs  registry.rs
brio-core/kernel/src/store/: impl.rs  integration_tests.rs  mod.rs  policy.rs
brio-core/kernel/src/store/migrations/: 002_add_branch_tables.sql
brio-core/kernel/src/vfs/: diff.rs  hashing.rs  manager.rs  mod.rs  policy.rs  reflink.rs  tests.rs
brio-core/kernel/src/vfs/diff/: apply.rs  compute.rs  mod.rs
brio-core/kernel/src/vfs/manager/: isolation.rs  mod.rs  session.rs  types.rs
brio-core/kernel/src/ws/: broadcaster.rs  connection.rs  handler.rs  mod.rs  types.rs
brio-core/kernel/src/ws/types/: branch.rs  events.rs  merge.rs  metrics.rs  mod.rs
brio-core/kernel/tests/: distributed_e2e.rs  engine_tests.rs  host_tests.rs  inference_tests.rs  integration_tests.rs  manifesto_e2e.rs  mesh_test.rs  mesh_tests.rs  openai_mock_tests.rs  proptest_policy.rs  proptest_vfs.rs  registry_test.rs  registry_tests.rs  vfs_tests.rs  wasm_e2e.rs
brio-core/wit/: brio.wit  grep-tool.wit  host.wit  logging.wit  planner.wit  read-file-tool.wit  tool.wit  tools.wit  worlds.wit
(+77 files in other folders)
