[workspace]
resolver = "2"
members = [
    "kernel",
    "components/supervisor",
    "components/tools/shell-tool",
    "components/agent-sdk",
    "components/agents/coder",
    "components/agents/reviewer",
    "components/agents/council",
    "components/agents/foreman",
    "components/agents/smart-agent",
    "integration-tests",
]

[workspace.dependencies]
tokio = { version = "1.36", features = ["full"] }
wasmtime = { version = "41.0.0" }
wasmtime-wasi = { version = "41.0.0" }
wasmtime-component-macro = { version = "34.0.2" }
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
thiserror = "1.0"
walkdir = "2"
dirs = "5.0"
once_cell = "1.20"
parking_lot = "0.12"
tempfile = "3.14"
sqlx = { version = "0.8.6", default-features = false, features = [
    "runtime-tokio-native-tls",
    "sqlite",
] }
regex = "1.10"
uuid = { version = "1.0", features = ["v4"] }
fs_extra = "1.3"
wit-bindgen = "0.51.0"

[profile.release]
opt-level = "s"
lto = true
