[workspace]
resolver = "2"
members = [
    "kernel",
    "components/supervisor",
    "components/tools/shell-tool",
    "components/tools/tool_grep",
    "components/tools/tool_read_file",
    "components/agent-sdk",
    "components/agents/coder",
    "components/agents/reviewer",
    "components/agents/council",
    "components/agents/foreman",
    "components/agents/smart-agent",
    "integration-tests",
    "benches",
]

[workspace.dependencies]
tokio = { version = "1.36", features = ["full"] }
wasmtime = { version = "41.0.0" }
wasmtime-wasi = { version = "41.0.0" }
wasmtime-component-macro = { version = "34.0.2" }
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
thiserror = "2.0"
walkdir = "2"
dirs = "5.0"
once_cell = "1.20"
parking_lot = "0.12"
tempfile = "3.14"
sqlx = { version = "0.8.6", default-features = false, features = [
    "runtime-tokio-native-tls",
    "sqlite",
] }
regex = "1.10"
uuid = { version = "1.0", features = ["v4"] }
fs_extra = "1.3"
wit-bindgen = "0.52.0"
chrono = { version = "0.4", features = ["serde"] }
sha2 = "0.10"
hex = "0.4"

[profile.release]
opt-level = "s"
lto = true

[workspace.lints.rust]
missing_docs = "deny"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
perf = { level = "warn", priority = -1 }
cargo = { level = "warn", priority = -1 }
# Multiple crate versions are expected in complex dependency trees
# Fixing this requires careful dependency updates that could break the build
multiple_crate_versions = "allow"
# Configuration structs naturally have many bool flags for different features
# Refactoring would unnecessarily complicate the API
struct_excessive_bools = "allow"
