[package]
name = "brio-tui"
version = "0.1.0"
edition = "2021"

[dependencies]
ratatui = "0.29.0"
crossterm = "0.28.1"
tokio = { version = "1.41.0", features = ["full"] }
futures = "0.3.31"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
anyhow = "1.0.95"
tokio-tungstenite = "0.21.0"
url = "2.5.4"
chrono = "0.4.39"
