[package]
name = "integration-tests"
version = "0.1.0"
edition = "2024"
license = "MPL-2.0"
description = "Integration tests for Brio kernel"
repository = "https://github.com/brio-labs/brio"
readme = "../../README.md"
keywords = ["test", "integration", "brio"]
categories = ["development-tools"]
authors = ["BrioCo <team@brio.build>"]
rust-version = "1.93"
publish = false

[dev-dependencies]
brio-kernel = { path = "../kernel" }
supervisor = { path = "../components/supervisor" }
agent-sdk = { path = "../components/agent-sdk" }
tokio = { workspace = true, features = ["full", "test-util"] }
anyhow = { workspace = true }
sqlx = { workspace = true, features = ["sqlite", "runtime-tokio"] }
secrecy = "0.10.3"
reqwest = { version = "0.13.1", default-features = false, features = [
    "json",
    "rustls",
] }
async-trait = "0.1"
tempfile = { workspace = true }
regex = { workspace = true }
chrono = "0.4"
serde_json = { workspace = true }
serde = { workspace = true }

[lints]
workspace = true
