[package]
name = "brio-kernel"
version = "0.1.0"
edition = "2024"
license = "MPL-2.0"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
wasmtime = { version = "40.0.1", features = ["component-model"] }
wasmtime-wasi = "40.0.1"
wit-bindgen = "0.51.0"
sqlx = { version = "0.8.6", default-features = false, features = [
    "sqlite",
    "runtime-tokio",
    "macros",
] }
uuid = { version = "1.0", features = ["v4"] }
fs_extra = "1.3"
anyhow = "1.0"
tracing = "0.1"
sqlparser = { version = "0.60", features = ["visitor"] }
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }
opentelemetry = "0.31"
opentelemetry_sdk = { version = "0.31", features = ["rt-tokio"] }
opentelemetry-otlp = { version = "0.31.0", features = ["grpc-tonic"] }
tracing-opentelemetry = "0.32.1"
tracing-appender = "0.2"
metrics = "0.24.3"
metrics-exporter-prometheus = "0.18.1"
config = "0.15.19"
axum = { version = "0.8.8", features = ["ws"] }
sysinfo = "0.37.2"
secrecy = { version = "0.10.3", features = ["serde"] }
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
thiserror = "2.0.17"
opentelemetry-semantic-conventions = "0.31.0"
tokio-tungstenite = "0.28"
json-patch = "4.1"
futures-util = "0.3"
bytes = "1.0"
reflink = "0.1"
walkdir = "2"
sha2 = "0.10"
hex = "0.4"
reqwest = { version = "0.13.1", default-features = false, features = [
    "json",
    "rustls",
] }
async-trait = "0.1"

# pprof uses Unix-specific APIs (pthread, signals) - only enable on Unix
[target.'cfg(unix)'.dependencies]
pprof = { version = "0.15", features = ["flamegraph", "prost-codec"] }

[dev-dependencies]
supervisor = { path = "../components/supervisor" }
wiremock = "0.6"
proptest = "1"

