[package]
name = "brio-kernel"
version = "0.1.0"
edition = "2024"
license = "MPL-2.0"
description = "Core kernel for the Brio agent runtime"
repository = "https://github.com/brio-labs/brio"
readme = "../../README.md"
keywords = ["agent", "runtime", "wasm", "brio"]
categories = ["wasm", "development-tools"]
authors = ["BrioCo <team@brio.build>"]
rust-version = "1.93"

[dependencies]
tokio = { workspace = true }
wasmtime = { workspace = true, features = ["component-model"] }
wasmtime-wasi = { workspace = true }
wit-bindgen = { workspace = true }
sqlx = { workspace = true, features = ["sqlite", "runtime-tokio"] }
uuid = { workspace = true }
fs_extra = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
sqlparser = { version = "0.60", features = ["visitor"] }
tracing-subscriber = { workspace = true, features = ["json", "env-filter"] }
opentelemetry = "0.31"
opentelemetry_sdk = { version = "0.31", features = ["rt-tokio"] }
opentelemetry-otlp = { version = "0.31.0", features = ["grpc-tonic"] }
tracing-opentelemetry = "0.32.1"
tracing-appender = "0.2"
metrics = "0.24.3"
metrics-exporter-prometheus = "0.18.1"
config = "0.15.19"
axum = { version = "0.8.8", features = ["ws"] }
sysinfo = "0.38.0"
secrecy = { version = "0.10.3", features = ["serde"] }
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
thiserror = { workspace = true }
opentelemetry-semantic-conventions = "0.31.0"
tokio-tungstenite = "0.28"
json-patch = "4.1"
futures-util = "0.3"
bytes = "1.0"
reflink = "0.1"
walkdir = "2"
sha2 = "0.10"
hex = "0.4"
reqwest = { version = "0.13.1", default-features = false, features = [
    "json",
    "rustls",
] }
async-trait = "0.1"
prost = "0.14.3"
tonic = "0.14.2"
tonic-prost = "0.14.2"
dunce = "1.0.5"
parking_lot = "0.12"
chrono = { workspace = true }

# pprof uses Unix-specific APIs (pthread, signals) - only enable on Unix
[target.'cfg(unix)'.dependencies]
pprof = { version = "0.15", features = ["flamegraph", "prost-codec"] }

[dev-dependencies]
wiremock = "0.6"
proptest = "1"
tempfile = { workspace = true }


[build-dependencies]
tonic-build = "0.14.2"
prost-build = "0.14.3"
protoc-bin-vendored = "3.0"
tonic-prost-build = "0.14.2"

[lints]
workspace = true
