[package]
name = "supervisor"
version = "0.1.0"
edition = "2024"
license = "MPL-2.0"
description = "Supervisor component for Brio agent orchestration"
repository = "https://github.com/brio-labs/brio"
readme = "../../../README.md"
keywords = ["agent", "supervisor", "brio", "orchestration"]
categories = ["wasm", "development-tools"]
authors = ["BrioCo <team@brio.build>"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wit-bindgen = { version = "0.51.0", default-features = false, features = [
    "std",
] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[lints]
workspace = true
