[package]
name = "supervisor"
version = "0.1.0"
edition = "2024"
license = "MPL-2.0"
description = "Supervisor component for Brio agent orchestration"
repository = "https://github.com/brio-labs/brio"
readme = "../../../README.md"
keywords = ["agent", "supervisor", "brio", "orchestration"]
categories = ["wasm", "development-tools"]
authors = ["BrioCo <team@brio.build>"]
rust-version = "1.93"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wit-bindgen = { workspace = true, features = [
    "std",
] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
uuid = { workspace = true, features = ["v4", "serde"] }
chrono = { workspace = true }
async-trait = "0.1"
thiserror = { workspace = true }
tracing = "0.1"
tokio = { workspace = true, features = ["rt", "macros"] }
brio-kernel = { path = "../../kernel" }

[dev-dependencies]
tempfile = { workspace = true }

[lints]
workspace = true
