[package]
name = "foreman-agent"
version = "0.1.0"
edition = "2024"
license = "MPL-2.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
wit-bindgen = { workspace = true }
agent-sdk = { path = "../../agent-sdk" }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
