[package]
name = "reviewer-agent"
version = "0.1.0"
edition = "2024"
license = "MPL-2.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
wit-bindgen = { version = "0.51.0", default-features = false, features = [
    "std",
    "macros",
] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
regex = "1.10"
anyhow = "1.0"
