[package]
name = "shell-tool"
version = "0.1.0"
edition = "2024"
license = "MPL-2.0"
description = "Shell tool component for Brio - provides shell command execution"
repository = "https://github.com/brio-labs/brio"
readme = "../../../../README.md"
keywords = ["tool", "shell", "brio", "command"]
categories = ["wasm", "development-tools"]
authors = ["BrioCo <team@brio.build>"]
rust-version = "1.93"

[lib]
crate-type = ["cdylib"]

[dependencies]
wit-bindgen = "0.51.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[lints]
workspace = true
